@@ -1,3 +1,14 @@
+2005-02-07  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3993354> Safari claims to put RTFD on the pasteboard, but doesn't, in some cases
+
+        Reviewed by john.
+
+        * WebView.subproj/WebHTMLView.m:
+        (-[WebHTMLView _stripAttachmentCharactersFromAttributedString:]): moved
+        (-[WebHTMLView _writeSelectionWithPasteboardTypes:toPasteboard:cachedAttributedString:]): take cachedAttributedString parameter in case the attributed string was gotten already
+        (-[WebHTMLView _writeSelectionToPasteboard:]): omit RTFD from the types list when there are no attachments
+
 2005-02-07  David Harrison  <harrison@apple.com>
 
         Reviewed by Ken.
